--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,19 +28,19 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Build
-    - run: |
+      run: |
          npm ci
          npx tsc --outDir ./dist
          npx pkg --compress Gzip --out-path ./dist ./dist/bot.js
     
     - name: Generate Hashes
-    - uses: MCJack123/ghaction-generate-release-hashes@v3
+      uses: MCJack123/ghaction-generate-release-hashes@v3
       with:
           hash-type: sha512
           file-name: ./dist/hashes.txt
           
     - name: Zip file and calculate hash 
-    - run: |
+      run: |
            zip -r release ./dist
            echo "ZipHash=$(sha512sum release.zip)" >> $GITHUB_OUTPUT
     
