--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,4 +47,5 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         body: ${{ github.ZipHash }}--sha512
-        tag_name: ${{ steps.vars.outputs.sha_short }}
+        tag_name: Build_$(date +"%Y.%m.%d_%H-%M")
+        prerelease: true
