--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,8 +11,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  build_and_release:
+    environment: production
     runs-on: ubuntu-latest
 
     strategy:
