--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        body: ${{ env.ZipHash--sha512 }}
+        body: sha512-${{ env.ZipHash }}
         files: artifact.zip
         token: ${{ secrets.RELEASE_PAT }}
         tag_name: Build_${{ env.TagName }}
