--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "dotenv": "^16.1.4",
-    "mineflayer": "^4.9.0",
-    "pkg": "^5.8.1"
+    "dotenv": "16.1.4",
+    "mineflayer": "4.9.0",
+    "pkg": "5.8.1"
   },
   "private": true,
   "devDependencies": {
-    "typescript": "^5.1.3"
+    "typescript": "5.1.3"
   }
 }
