--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         cache: 'npm'
     - name: Build
       run: |
-         npm ci
+         yarn
          npx tsc --outDir ./dist
          npx pkg --compress Gzip --out-path ./dist ./dist/bot.js
           
