--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,7 +47,12 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        body: sha512-${{ env.ZipHash }}
+        body: |
+          sha512-${{ env.ZipHash }}
+
+          THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.
+
+          在適用法律允許的範圍內，對該程式沒有任何保證。除非另有書面說明，否則版權持有人和/或其他各方 "按原樣 "提供該程式，不提供任何明示或暗示的保證，包括但不限於對適銷性和特定用途的適用性的暗示保證。關於程式的品質和性能的全部風險由您承擔。如果該程式被證明有缺陷，您將承擔所有必要的服務、修理或糾正的費用。
         files: artifact.zip
         token: ${{ secrets.RELEASE_PAT }}
         tag_name: Build_${{ env.TagName }}
